// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout.styles Container DEVE ser igual ao snapshot QUANDO data-backgroundblack for igual a false 1`] = `
.c0 {
  text-align: center;
  min-height: 100vh;
  background-color: #23242a;
}

<div>
  <div
    class="c0"
    data-backgroundblack="false"
  />
</div>
`;

exports[`Layout.styles Container DEVE ser igual ao snapshot QUANDO data-backgroundblack for igual a true 1`] = `
.c0 {
  text-align: center;
  min-height: 100vh;
  background-color: #F7F5F2;
}

<div>
  <div
    class="c0"
    data-backgroundblack="true"
  />
</div>
`;

exports[`Layout.styles Header DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  width: 100%;
  height: 100px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Layout.styles Item DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  align-items: center;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Layout.styles ItemContent DEVE ser igual ao snapshot 1`] = `
.c0 {
  margin: 10px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Layout.styles Nav DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: flex;
  padding-right: 30px;
  gap: 10px;
}

<div>
  <nav
    class="c0"
  />
</div>
`;

exports[`Layout.styles TextoHeader DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 15px;
  color: #fff;
  cursor: pointer;
}

<div>
  <p
    class="c0"
  />
</div>
`;
